--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -14,11 +15,15 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="CMMA Administration">
+
+  <!-- STEP 3: ADD YOUR CLIENT ID 
+  <meta name="google-signin-client_id" content="ADD-HERE.apps.googleusercontent.com">
+  -->
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,13 +31,41 @@
   <meta name="apple-mobile-web-app-title" content="cmmaa">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>cmmaa</title>
+  <title>cmma_admin</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
+
+  <!-- STEP 1: ADD core Firebase JS SDK -->
+  <!-- The core Firebase JS SDK is always required and must be listed first-->
+  <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-app.js"></script>
+
+  <!-- STEP 1: Add SDKs for Firebase products that you want to use-->
+  <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.3/firebase-firestore.js"></script>
+
+
+  <!-- STEP 2: Initialize Firebase with configuration -->
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: 'AIzaSyBm54--sB48BMZmmxWf9lymsEyofP8sms4',
+      appId: '1:543903890015:web:1277c5062c276f8ab4f9ea',
+      messagingSenderId: '543903890015',
+      projectId: 'cmma-1e6df',
+      authDomain: 'cmma-1e6df.firebaseapp.com',
+      storageBucket: 'cmma-1e6df.appspot.com',
+      measurementId: 'G-2FCQGT8BDD',
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
+
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
@@ -98,4 +131,5 @@
     }
   </script>
 </body>
+
 </html>
